refactored classes